tried to fix the oveflow-x on mobile

--- a/src/components/cart-dropdown/cart-dropdown.style.scss
+++ b/src/components/cart-dropdown/cart-dropdown.style.scss
@@ -1,10 +1,23 @@
 @keyframes fade-in {
-  0%   { transform: translateX(100%);
-          opacity: 0; }
-  100% { transform: translateX(0%); 
-          opacity: 1;}
+  0%   {opacity: 0; }
+
+  50% {opacity: 0.5;}
+
+  75% {opacity: 0.7;}
+
+  100% {opacity: 1;}
 }
 
+// @keyframes fade-in {
+//   0%   {opacity: 1; }
+
+//   50% {opacity: 0.5;}
+
+//   // 25% {opacity: 0.2;}
+
+//   100% {opacity: 0;
+//       visibility: hidden;}
+// }
 
 
 .cart-dropdown-container {
@@ -27,12 +40,9 @@
     }
     
     
-   &.fade-out {
-      display: none;
-    // opacity: 0.5;
-    // transform: translateX(100%);
-    // transition: all 300ms ease-in-out;
-   } 
+  //  &.fade-out {
+  //   animation: fade-out 300ms ease-in-out;
+  //  } 
 
   
     
